header text align correction

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -3,6 +3,7 @@
 
 body
   min-width: 1000px
+  font-family: 'Source Sans Pro'
 
 header
   height: 120px
@@ -21,14 +22,14 @@ header
 .header-right
   height: 48px
   float: left
-  padding-left: 45px
-  margin-top: 50px
+  padding-left: 140px
+  margin-top: 35px
   h3
     color: #fff
     float: left
     margin: 0 0 6px 0
-    font-size: 1.3em
-    line-height: 1em
+    font-size: 1.4em
+    line-height: 1.3em
     font-weight: 400
     letter-spacing: 0.1px
     margin-right: 20px
@@ -80,9 +81,10 @@ header
   h2
     font-size: 33px
     font-weight: 200
+    font-style: normal
     margin: 0 auto
     width: 960px
-    padding-top: 30px
+    clear: both
     margin-bottom: -70px
     color: #ef791a
 
